tests/parse_print/autogen/560~1436548014_12/stderr.expected
Error:
    tests/parse_print/autogen/560~1436548014_12/spec.essence:10:14:
   |
10 |              partition({5, 5, 4, 3, 1}, {1}) - partition({0, 1, 4, 1, 4}, {1})),
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from int

tests/parse_print/autogen/560~1436548014_12/spec.essence:10:48:
   |
10 |              partition({5, 5, 4, 3, 1}, {1}) - partition({0, 1, 4, 1, 4}, {1})),
   |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from int
